-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b27
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1406:11: error: non-type template argument is not a constant expression
ARRAY_LOADTO32(T_INT, jint, "%d", STACK_INT, 0);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1389:11: note: expanded from macro 'ARRAY_LOADTO32'
ARRAY_INTRO(-2); \
^~~~~~~~~~~~~~~
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1374:7: note: expanded from macro 'ARRAY_INTRO'
STATIC_ASSERT(add_len == strlen("Index out of bounds for length ")); \
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/fool/df/jdk/src/hotspot/share/utilities/debug.hpp:190:28: note: expanded from macro 'STATIC_ASSERT'
STATIC_ASSERT_FAILURE< (Cond) >::value ]
^~~~~~
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1406:11: note: non-constexpr function 'strlen' cannot be used in a constant expression
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1389:11: note: expanded from macro 'ARRAY_LOADTO32'
ARRAY_INTRO(-2);
ARRAY_LOADTO32(T_INT, jint, "%d", STACK_INT, 0);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1389:11: note: expanded from macro 'ARRAY_LOADTO32'
ARRAY_INTRO(-2); \
^~~~~~~~~~~~~~~
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1374:7: note: expanded from macro 'ARRAY_INTRO'
STATIC_ASSERT(add_len == strlen("Index out of bounds for length ")); \
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/fool/df/jdk/src/hotspot/share/utilities/debug.hpp:190:28: note: expanded from macro 'STATIC_ASSERT'
STATIC_ASSERT_FAILURE< (Cond) >::value ]
^~~~~~
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1406:11: note: non-constexpr function 'strlen' cannot be used in a constant expression
/Users/fool/df/jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:1389:11: note: expanded from macro 'ARRAY_LOADTO32'
ARRAY_INTRO(-2);
- relates to
-
JDK-8256726 Zero: print proper message in ArrayIndexOutOfBoundException
-
- Resolved
-