8257420: Zero VM build broken with clang after JDK-8256726 due to strlen() is not a constexpr